syntax = "proto3";

package whu.lambda.moe.dto;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

message Activity{
    string name = 1;
    string time = 2;
    string place = 3;
    string status = 4;
    string content = 5;
    bool is_valid = 6;
    string summary = 7;
    string author = 8;
    string cover_url = 9;
    string tags = 10;
    google.protobuf.Timestamp created_at = 11;
    int32 id = 12;
}

message Article{
    string name = 1;
    string author = 2;
    google.protobuf.Timestamp created_at = 3;
    string cover_url = 4;
    string content = 5;
    bool is_valid = 6;
    string about = 7;
    string tags = 8;
    int32 id = 9;
}

/*
message LoginInfo{
    string username = 1;
    string password = 2;
}


message Account{
    string username = 1;
    string password = 2;
    string avatar = 3;
    string bio = 4;
    string email = 5;
    string phone = 6;
    bool is_valid = 7;
}
*/

service Anonymous{
    rpc HealthCheck(google.protobuf.Empty) returns(google.protobuf.Empty);
    rpc GetActivity(google.protobuf.Int32Value) returns(Activity);
    rpc GetActivities(google.protobuf.Empty) returns(stream Activity);
    rpc GetArticle(google.protobuf.Int32Value) returns(Article);
    rpc GetArticles(google.protobuf.Empty) returns(stream Article);
}

service Authenticated{
    rpc HealthCheck(google.protobuf.Empty) returns(google.protobuf.Empty);
    // Returns ID, or -1 on failure.
    rpc PostActivity(Activity) returns(google.protobuf.Int32Value);
    rpc PostArticle(Article) returns(google.protobuf.Int32Value);
}